--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/awesome-notifications": "^3.1.1",
     "@types/axios": "^0.14.0",
     "@types/http-proxy-middleware": "^1.0.0",
     "@types/jest": "^27.5.2",
@@ -18,6 +19,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "awesome-notifications": "^3.1.3",
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "http-proxy-middleware": "^2.0.6",
@@ -54,5 +56,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://192.168.1.4:3001"
 }
