--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -56,5 +57,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.1.4:3001"
+  "proxy": "http://172.20.10.4:3001",
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
+  }
 }
