--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.6",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -57,7 +58,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://192.168.1.4:3001",
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "@types/uuid": "^8.3.4"
   }
